--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,16 @@ body,
     height: 100%;
     margin: 0;
 }
+
+.grid-container {
+    width: 700px;
+    height: 400px;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: auto 200px auto;
+    gap: 20px;
+}
+
+.grid-container > div {
+    background-color: #daa520;
+}
